[package]
name = "astral_wasm"
version = "0.1.0"
authors = ["lain || Xavier Fernandez <xavier.fernandez92@myhunter.cuny.edu>"]
edition = "2018"
description = "the same encryption and compression functions from astral-cli... for the web"
license = "MIT"
readme = "README.md"
repository = ""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.71"
js-sys = "0.3.48"
age = { version = "0.5.0", git = "https://github.com/str4d/rage", rev = "386ccc91bd", features = ["armor", "web-sys"] }
secrecy = "0.7.0"
wee_alloc = "0.4.5"
blake3 = "0.3.7" 
console_error_panic_hook = "0.1.6"
brotli = "3.3.0"

[profile.release]
opt-level = "s"
lto = true
panic = 'abort'